@@ -13,7 +13,10 @@ TARGET_PLUGIN := $(DESTDIR)/usr/lib/rpmrebuild/plugins
 TARGET_LOCALE := $(DESTDIR)/usr/lib/rpmrebuild/locale
 TARGET_MAN    := $(DESTDIR)/usr/share/man
 
+# all languages (locale, man, plugins)
 LANGS := en fr_FR fr_FR.UTF-8
+# default language for html pages
+LANG_DEF := en
 
 # add current version in man pages
 define MakeManPage
@@ -44,3 +47,11 @@ define InstallLocales
 	done                                                           || exit;\
 	:
 endef
+
+# rules to convert man page into html pages
+%.html: %.1
+	faire_doc2.sh $< $@
+
+%.html: %.1rrp
+	faire_doc2.sh $< $@
+
