@@ -29,6 +29,8 @@ SCRIPTS :=        \
 MANPAGES_BASE := $(addsuffix .1rrp,$(PLUGINS))
 
 MANPAGES := $(foreach lang,$(LANGS),$(addprefix man/$(lang)/,$(MANPAGES_BASE)))
+MANPAGES_DEF := $(foreach lang,$(LANG_DEF),$(addprefix man/$(lang)/,$(MANPAGES_BASE)))
+HTML_PAGES=$(MANPAGES_DEF:.1rrp=.html)
 
 MANPAGES_SRC := $(addsuffix .in,$(MANPAGES))
 
@@ -53,6 +55,12 @@ install:
 
 clean:
 	$(RM) $(MANPAGES)
+	$(RM) $(HTML_PAGES)
 
 tar_names:
 	@echo $(addprefix plugins/,$(SOURCES))
+
+$(HTML_PAGES): $(MANPAGES_DEF)
+
+html: $(HTML_PAGES)
+	cp $(HTML_PAGES) $(TOP_DIR)/../web
